fix: [code-1153]: fix spacing in check (#859)

--- a/web/src/pages/RepositoriesListing/RepositoriesListing.module.scss
+++ b/web/src/pages/RepositoriesListing/RepositoriesListing.module.scss
@@ -140,6 +140,9 @@
   --srm-background: #f6f1ff;
   background-color: var(--grey-0) !important;
   border-left: 1px solid var(--grey-200) !important;
+  position: sticky;
+  bottom: 0;
+
   .featureText {
     font-size: 13px !important;
     font-weight: 600 !important;
